--- a/a002.html
+++ b/a002.html
@@ -53,15 +53,15 @@
                 <li data-role="list-divider" class="category-title">基本信息</li> <!-- 基本信息 -->
                 <li>
                     <div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">B4200002023080500069</div>
+                    <div class="detail-value " id="reqNo">B4200002023101800069</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">有效范围：</div>
-                    <div class="detail-value " id="passDists">湖北省我的</div>
+                    <div class="detail-value " id="passDists">湖北省</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行日期：</div>
-                    <div class="detail-value " id="passDate">2023-08-05至2023-08-31</div>
+                    <div class="detail-value " id="passDate">2023-10-18至2023-10-25</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行次数：</div>
@@ -70,7 +70,7 @@
                 <li>
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>荆门-荆州,鸿发物流-培公大道-荆门收费站-G55二广高速-章庄铺收费站-集贸南路-章庄铺小学。(审批路线不含城市道路)</div>
+                        <br>昌桥村-S122-泉都大道-咸宁东收费站-S78蕲嘉高速-G4京港澳高速-咸宁南收费站 -G351-中国石油咸宁南加油站 。 (审 批 路 线 不 含 城 市 道 路 )</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">承运单位：</div>
@@ -85,7 +85,7 @@
                 <li data-role="list-divider" class="category-title">货物信息</li> <!-- 货物信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">钢结构（钢板）</div>
+                    <div class="detail-value " id="cargoInfo">履带主机 （ 1台 ）</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物重量：</div>
@@ -93,17 +93,17 @@
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
-                    <div class="detail-value " id="cargoOutline">24.00 × 3.50 × 4.50</div>
+                    <div class="detail-value " id="cargoOutline">24.00 × 3.70 × 4.50</div>
                 </li>
 
                 <li data-role="list-divider" class="category-title">车辆信息</li> <!-- 车辆信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">牵引车车号牌：</div>
-                    <div class="detail-value" id="vehicleNo">冀E12345</div>
+                    <div class="detail-value" id="vehicleNo">冀EQ1451</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">牵引车厂牌型号：</div>
-                    <div class="detail-value" id="model">陕汽牌</div>
+                    <div class="detail-value" id="model">解放牌</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">牵引车整备质量：</div>
@@ -111,7 +111,7 @@
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车车号牌：</div>
-                    <div class="detail-value" id="hanvehicleNo">冀E12345挂</div>
+                    <div class="detail-value" id="hanvehicleNo">鲁H7KL3挂</div>
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车厂牌型号：</div>
@@ -129,7 +129,7 @@
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
-                    <div class="detail-value " id="totalOutline">24.00 × 3.50 × 4.50</div>
+                    <div class="detail-value " id="totalOutline">24.00 × 3.70 × 4.50</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">轴荷分布：</div>
