--- a/a002.html
+++ b/a002.html
@@ -53,7 +53,7 @@
                 <li data-role="list-divider" class="category-title">基本信息</li> <!-- 基本信息 -->
                 <li>
                     <div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">B4200002023101800069</div>
+                    <div class="detail-value " id="reqNo">B4200002023102000069</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">有效范围：</div>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行日期：</div>
-                    <div class="detail-value " id="passDate">2023-10-18至2023-10-25</div>
+                    <div class="detail-value " id="passDate">2023-10-20至2023-10-25</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行次数：</div>
@@ -70,7 +70,7 @@
                 <li>
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>大冶汇通汽修-金海大道-獭山大道-大冶东收费站-S78蕲嘉高速-G4京港澳高速-咸宁南收费站 -G351-中国石油咸宁南加油站 。 (审 批 路 线 不 含 城 市 道 路 )</div>
+                        <br>绿化六队-G318 -白洋收费站-G59呼北高速-G42沪蓉高速-当阳东收费站 -S107-玉阳三中。 (审 批 路 线 不 含 城 市 道 路 )</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">承运单位：</div>
@@ -85,21 +85,21 @@
                 <li data-role="list-divider" class="category-title">货物信息</li> <!-- 货物信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">推土机 （ 1台 ）</div>
+                    <div class="detail-value " id="cargoInfo">挖机 （ 1台 ）</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">22.00吨</div>
+                    <div class="detail-value " id="cargoWeight">44.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
-                    <div class="detail-value " id="cargoOutline">10.00 × 3.75 × 4.50</div>
+                    <div class="detail-value " id="cargoOutline">12.00 × 3.75 × 4.50</div>
                 </li>
 
                 <li data-role="list-divider" class="category-title">车辆信息</li> <!-- 车辆信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">牵引车车号牌：</div>
-                    <div class="detail-value" id="vehicleNo">冀E3705Z</div>
+                    <div class="detail-value" id="vehicleNo">冀EQ3412</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">牵引车厂牌型号：</div>
@@ -111,7 +111,7 @@
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车车号牌：</div>
-                    <div class="detail-value" id="hanvehicleNo">鲁HJ73D挂</div>
+                    <div class="detail-value" id="hanvehicleNo">冀ESP29挂</div>
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车厂牌型号：</div>
@@ -125,7 +125,7 @@
                 <li data-role="list-divider" class="category-title">车货总体信息</li> <!-- 车货总体信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">车货总重量：</div>
-                    <div class="detail-value " id="totalWeight">39.00吨</div>
+                    <div class="detail-value " id="totalWeight">61.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
@@ -133,7 +133,7 @@
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">轴荷分布：</div>
-                    <div class="detail-value " id="axlesLoad">10+20+30</div>
+                    <div class="detail-value " id="axlesLoad">10+20+2*18</div>
                 </li>
             </ul>
         </div>
