--- a/004.html
+++ b/004.html
@@ -75,17 +75,15 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A3400002023101904839</div></li>
+                    <div class="detail-value " id="reqNo">A4400002023101900342</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
 				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2023年10月20日 18时35分至 2023年10月29日 23时59分</div></li>
+                    <div class="detail-value " id="passDate">2023年10月20日 18时55分至 2023年10月29日 23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 英明工业园---G240---沙头收费站---S15沈海高速广州支线---G15沈海高速---G75兰海高速---粤挂界；<br><hr><span id="pro">广西壮族自治区</span>: 桂粤界---G75兰海高速---山口收费站
-
-<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 广东省: 英明工业园---G240---沙头收费站---S15沈海高速广州支线---S5---广台高速--- S15沈海高速广州支线---G15沈海高速---G75兰海高速---粤桂界；<br><hr><span id="pro">广西壮族自治区</span>: 桂粤界---G75兰海高速---山口收费站 <br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -100,7 +98,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
                     <div class="detail-value " id="cargoInfo">破碎机1台</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">35.00吨</div></li>
+                    <div class="detail-value " id="cargoWeight">40.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
                     <div class="detail-value " id="cargoOutline">14.00 × 3.75 × 3.60</div></li>
                     
@@ -116,7 +114,7 @@
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车厂牌型号：</div>
                     <div class="detail-value" id="hanmodel">LWY9402TDP</div></li>
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车整备质量：</div>
-                    <div class="detail-value " id="hanvehWeight">8.2吨</div></li>
+                    <div class="detail-value " id="hanvehWeight">8.5吨</div></li>
                 
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车货总体信息</li> <!-- 车货总体信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货总重量：</div>
