--- a/a001.html
+++ b/a001.html
@@ -70,7 +70,7 @@
                 <li>
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>鸿发物流-天仙大道-天门收费站-G0421许广高速-S13武监高速-洪湖收费站-洪湖大道-强子维修 。 (审 批 路 线 不 含 城 市 道 路 )</div>
+                        <br>鸿发物流-天仙大道-G240-岳口收费站-G0421许广高速-S13武监高速-洪湖收费站-洪湖大道-强子维修 。 (审 批 路 线 不 含 城 市 道 路 )</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">承运单位：</div>
