--- a/a002.html
+++ b/a002.html
@@ -70,7 +70,7 @@
                 <li>
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>绿化六队-G318 -白洋收费站-G59呼北高速-G42沪蓉高速-当阳东收费站 -S107-玉阳三中。 (审 批 路 线 不 含 城 市 道 路 )</div>
+                        <br>鸿发物流-天仙大道-G240-岳口收费站-G0421许广高速-S13武监高速-洪湖收费站-洪湖大道-强子维修 。 (审 批 路 线 不 含 城 市 道 路 )</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">承运单位：</div>
@@ -85,21 +85,21 @@
                 <li data-role="list-divider" class="category-title">货物信息</li> <!-- 货物信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">挖机 （ 1台 ）</div>
+                    <div class="detail-value " id="cargoInfo">挖机 </div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">44.00吨</div>
+                    <div class="detail-value " id="cargoWeight">46.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
-                    <div class="detail-value " id="cargoOutline">12.00 × 3.75 × 4.50</div>
+                    <div class="detail-value " id="cargoOutline">14.00 × 3.70 × 4.50</div>
                 </li>
 
                 <li data-role="list-divider" class="category-title">车辆信息</li> <!-- 车辆信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">牵引车车号牌：</div>
-                    <div class="detail-value" id="vehicleNo">冀EQ3412</div>
+                    <div class="detail-value" id="vehicleNo">冀EQ1413</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">牵引车厂牌型号：</div>
@@ -111,7 +111,7 @@
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车车号牌：</div>
-                    <div class="detail-value" id="hanvehicleNo">冀ESP29挂</div>
+                    <div class="detail-value" id="hanvehicleNo">冀EKL55挂</div>
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车厂牌型号：</div>
@@ -125,15 +125,15 @@
                 <li data-role="list-divider" class="category-title">车货总体信息</li> <!-- 车货总体信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">车货总重量：</div>
-                    <div class="detail-value " id="totalWeight">61.00吨</div>
+                    <div class="detail-value " id="totalWeight">63.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
-                    <div class="detail-value " id="totalOutline">22.00 × 3.75 × 4.50</div>
+                    <div class="detail-value " id="totalOutline">24.00 × 3.70 × 4.50</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">轴荷分布：</div>
-                    <div class="detail-value " id="axlesLoad">10+20+2*18</div>
+                    <div class="detail-value " id="axlesLoad">10+20+3*18</div>
                 </li>
             </ul>
         </div>
