--- a/002.html
+++ b/002.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">福建省</span>：顺源有限公司---G356 ---清流收费站---G72泉南高速---闽赣界；<br><hr><span id="pro">江西省</span>: 赣闽界---G72泉南高速---石城南收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">福建省</span>：顺源有限公司---G356 ---永安西收费站---G72泉南高速---闽赣界；<br><hr><span id="pro">江西省</span>: 赣闽界---G72泉南高速---石城南收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
