--- a/002.html
+++ b/002.html
@@ -77,13 +77,13 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A4400002023102405503</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">福建省，江西省</div></li>
+				<div class="detail-value " id="passDists">江西省，福建省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
                     <div class="detail-value " id="passDate">2023年10月25日09时05分至 2023年10月30日 23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">福建省</span>：顺源有限公司---G356 ---永安西收费站---G72泉南高速---闽赣界；<br><hr><span id="pro">江西省</span>: 赣闽界---G72泉南高速---石城南收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">江西省</span>：瑞金东收费站--G76厦蓉高速--赣闽界泉南高速---闽赣界；<br><hr><span id="pro">福建省</span>: 福建省: 闽赣界--G76厦蓉高速--海沧枢纽--G15沈海高速--海沧收费站--G324--茂欣（厦门）工业有限公司<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -131,7 +131,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
-				<div class="detail-value " id="passOpinion"><br>福建省：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>江西省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
+				<div class="detail-value " id="passOpinion"><br>江西省：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>福建省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
