--- a/002.html
+++ b/002.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">江西省</span>：瑞金东收费站--G76厦蓉高速--赣闽界泉南高速---闽赣界；<br><hr><span id="pro">福建省</span>: 福建省: 闽赣界--G76厦蓉高速--海沧枢纽--G15沈海高速--海沧收费站--G324--茂欣（厦门）工业有限公司<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">江西省</span>：瑞金东收费站--G76厦蓉高速--赣闽界泉南高速---闽赣界；<br><hr><span id="pro">福建省</span>:  闽赣界--G76厦蓉高速--海沧枢纽--G15沈海高速--海沧收费站--G324--茂欣（厦门）工业有限公司<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
