--- a/003.html
+++ b/003.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">云南省</span>:武定狮山收费站--G5京昆高速--S91滇中环线高速--G56杭瑞高速--G60沪昆高速--滇贵界；<br><hr><span id="pro">贵州省</span>:贵滇界--G60沪昆高速--盘州收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">云南省</span>:禄劝收费站--S91滇中环线高速--G56杭瑞高速--G60沪昆高速--滇贵界；<br><hr><span id="pro">贵州省</span>:贵滇界--G60沪昆高速--盘州收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -96,7 +96,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">工程机械 </div></li>
+                    <div class="detail-value " id="cargoInfo">铲车挖机各一台 </div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">38.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
