--- a/a001.html
+++ b/a001.html
@@ -53,7 +53,7 @@
                 <li data-role="list-divider" class="category-title">基本信息</li> <!-- 基本信息 -->
                 <li>
                     <div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">B4200002023102400069</div>
+                    <div class="detail-value " id="reqNo">B4200002023103000069</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">有效范围：</div>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行日期：</div>
-                    <div class="detail-value " id="passDate">2023-10-24至2023-10-28</div>
+                    <div class="detail-value " id="passDate">2023-10-30至2023-11-05</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行次数：</div>
@@ -70,7 +70,7 @@
                 <li>
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>宜昌起帆电缆有限公司-先锋路-G318-宜昌桥北收费站-G50沪渝高速-仙桃收费站-S214-中国联合网络通讯有限公司汉江分公司 。 (审 批 路 线 不 含 城 市 道 路 )</div>
+                        <br>宜昌起帆电缆有限公司-先锋路-猇亭大道-伍临路-花溪路-三峡大道-宜昌收费站-S58三峡高速-G50沪渝高速-仙桃收费站-S214-中国联合网络通讯有限公司汉江分公司 。 (审 批 路 线 不 含 城 市 道 路 )</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">承运单位：</div>
@@ -89,7 +89,7 @@
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">32.00吨</div>
+                    <div class="detail-value " id="cargoWeight">38.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -99,7 +99,7 @@
                 <li data-role="list-divider" class="category-title">车辆信息</li> <!-- 车辆信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">牵引车车号牌：</div>
-                    <div class="detail-value" id="vehicleNo">冀E7417Y</div>
+                    <div class="detail-value" id="vehicleNo">冀EQ1413</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">牵引车厂牌型号：</div>
@@ -111,7 +111,7 @@
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车车号牌：</div>
-                    <div class="detail-value" id="hanvehicleNo">鲁H8U3F挂</div>
+                    <div class="detail-value" id="hanvehicleNo">冀EKL55挂</div>
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车厂牌型号：</div>
@@ -125,7 +125,7 @@
                 <li data-role="list-divider" class="category-title">车货总体信息</li> <!-- 车货总体信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">车货总重量：</div>
-                    <div class="detail-value " id="totalWeight">49.00吨</div>
+                    <div class="detail-value " id="totalWeight">55.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
