--- a/002.html
+++ b/002.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">湖北省</span>：泰丰建材城--三峡大道--宜昌收费站--S58三峡高速--S54鸦猇高速-G42沪蓉高速--G59呼北高速--G4213麻安高速--S83郧巫高速--G7011十天高速--鄂陕界；<br><hr><span id="pro">陕西省</span>: 陕鄂界--G70福银高速--S4011商州联络线--G40沪陕高速--G6521榆蓝高速--G30连霍高速--G3021临兴高速--G65包茂高速--G20青银高速--靖边西收费站--靖边职教中心<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">湖北省</span>：泰丰建材城--三峡大道--宜昌收费站--S58三峡高速--S54鸦猇高速-G42沪蓉高速--G59呼北高速--G4213麻安高速--S83郧巫高速--G7011十天高速--鄂陕界；<br><hr><span id="pro">陕西省</span>: 陕鄂界--G70福银高速--S4011商州联络线--G40沪陕高速--G6521榆蓝高速--G30连霍高速--G3021临兴高速--G65包茂高速--G20青银高速--杨桥畔收费站--S204--国华新能源有限公司<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
