--- a/003.html
+++ b/003.html
@@ -77,13 +77,13 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A4200002023110302699</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">甘肃省，陕西省</div></li>
+				<div class="detail-value " id="passDists">宁夏回族自治区，陕西省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
                     <div class="detail-value " id="passDate">2023年11月03日18时24分至 2023年11月10日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">甘肃省</span>:盐池县隆达水泥制品有限公司--G338--马儿庄收费站--G2012定武高速--G20青银高速--甘陕界；<br><hr><span id="pro">陕西省</span>:陕甘界--G20青银高速--靖边西收费站--S106--正大花园<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">宁夏回族自治区</span>:速通汽车养护中心--G211--太阳山收费站--G2012定武高速--G20青银高速--宁陕界；<br><hr><span id="pro">陕西省</span>:陕宁界--G20青银高速--靖边西收费站--S106--正大花园<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -131,7 +131,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
-				<div class="detail-value " id="passOpinion"><br>甘肃省：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>陕西省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
+				<div class="detail-value " id="passOpinion"><br>宁夏回族自治区：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>陕西省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
