--- a/002.html
+++ b/002.html
@@ -104,7 +104,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车辆信息</li> <!-- 车辆信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车车号牌：</div>
-                    <div class="detail-value" id="vehicleNo">冀E2740Z5</div></li>
+                    <div class="detail-value" id="vehicleNo">冀E2740Z</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车厂牌型号：</div>
                     <div class="detail-value" id="model">CA4250P66K24TA1</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车整备质量：</div>
